# SEMI_DENSE_MAPPING

semi_tracking/: CMakeLists.txt  README.md  run_car.sh  run_eth.sh  run_kitti.sh
semi_tracking/cmake_modules/src/: visual_odometer.cc
semi_tracking/csio/: csio_frame_parser.h
semi_tracking/csio/csio/: csio_frame_parser.h  csio_stream.h
semi_tracking/csio/src/: csio_glviewer_view.cc  image_file.cc  spm2csio.cc
semi_tracking/include/: common.h  evaluator.h  frame.h  image.h  image_file.h  image_pyramid.h  image_util.h  map.h  optimizer.h  semi_mapper.h  semi_tracker.h  time_profile.h  util.h  viewer.h
semi_tracking/src/: euroc_main.cc  image_file.cc  image_util.cc  kitti_main.cc  main.cc  optimizer.cc  semi_mapper.cc  semi_tracker.cc  viewer.cc
